--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "chai-backend",
   "version": "1.0.0",
   "description": "a backend at chai aur code channel",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon srcc/index.js"
   },
   "keywords": [
     "javascript",
@@ -12,5 +13,9 @@
     "chai"
   ],
   "author": "Rachit Kesarwani",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
+  }
 }
